--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-ftp-deploy": "^0.1.6"
+  },
+  "dependencies": {
+    "dotenv": "^0.4.0"
   }
 }
